<resources>
    <string name="app_name">aplicacion2</string>
    <string name="Bienvenida">MESSENGER 2</string>
    <string name="Nombre">Santiago C</string>
    <string name="RegistrateHome">Regístrate</string>
    <string name="BotonHome">Comienza</string>
    <string name="TextoHome">Inicia una nueva aventura con MESSENGER 2 y descubre una nueva forma de ver el mundo</string>
    <string name="registrate_home">Registrate</string>
    <string name="texto_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="btn_login">Ingresar</string>
    <string name="recupera_contraseña_login">Recupera Tu Contraseña</string>
    <string name="google_login">Ingresa con Google</string>
    <string name="no_tienes_cuenta_home">No tienes cuenta?</string>
    <string name="nombre2">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña1">Contraseña</string>
    <string name="verifica_contrase_a">Verifica contraseña</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="terminos_condiciones">Acepto términos y condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="Catálogo">Catálogo</string>
    <string name="favoritos">Favoritos</string>
    <string name="Perfil">Perfil</string>
    <string name="open">Abrir menú</string>
    <string name="close">Cerrar menú</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Admin">Admin</string>
    <string name="productos_destacados">Productos destacados</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="ingresar_con_huella">Ingresar con Huella</string>
    <string name="salir">Salir</string>
</resources>