<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/inicio"
        android:icon="@android:drawable/ic_menu_today"/>
    <item
        android:id="@+id/nav_admin"
        android:title="@string/Admin"
        android:icon="@android:drawable/ic_menu_gallery"/>
    <item
        android:id="@+id/nav_favoritos"
        android:title="@string/favoritos"
        android:icon="@android:drawable/ic_menu_recent_history"/>
    <item
        android:id="@+id/nav_usuarios"
        android:title="@string/Usuarios"
        android:icon="@android:drawable/ic_menu_view"/>
    <item
        android:id="@+id/nav_salir"
        android:title="@string/salir"
        android:icon="@android:drawable/ic_menu_view"/>
</menu>