<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/logo3"
                android:layout_width="134dp"
                android:layout_height="121dp"
                app:srcCompat="@drawable/logo"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="28dp" />

            <TextView
                android:id="@+id/nombre_app3"
                android:layout_width="242dp"
                android:layout_height="53dp"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:text="@string/Bienvenida"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="62dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/texto_login"
            android:layout_width="294dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/texto_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:gravity="center">

            <EditText
                android:id="@+id/regis_nombre"
                android:layout_width="367dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_edi_text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:hint="@string/nombre2"
                android:textColorHint="#808080"/>

            <EditText
                android:id="@+id/regis_Correo"
                android:layout_width="367dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edi_text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/correo_electr_nico"
                android:textColorHint="#808080"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/regis_Contraseña"
                android:layout_width="367dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edi_text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/contraseña1"
                android:textColorHint="#808080"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/regis_Verifica_Contraseña"
                android:layout_width="367dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edi_text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/verifica_contrase_a"
                android:textColorHint="#808080"
                android:inputType="textPassword" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkTerminos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminos_condiciones"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                app:buttonTint="@color/botones"/>



            <Button
                android:id="@+id/regis_Btn_Registrate"
                android:layout_width="267dp"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/botones"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:padding="0dp"
                android:text="@string/RegistrateHome"
                android:textSize="35dp"
                app:strokeColor="@color/bordes"
                app:strokeWidth="1.5dp" />

        </LinearLayout>
    </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/regis_Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:text="@string/ya_tienes_cuenta"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

            <TextView
                android:id="@+id/regis_Text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tiro_devanagari_hindi"
                android:text="@string/inicia_sesi_n"
                android:textColor="@color/registrate"
                android:textSize="20dp"
                android:paddingStart="10dp"/>
        </LinearLayout>

</LinearLayout>

