<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".ui.auth.LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="134dp"
            android:layout_height="121dp"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/nombre_app2"
            android:layout_width="242dp"
            android:layout_height="53dp"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/Bienvenida"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/texto_login"
        android:layout_marginTop="8dp"
        android:layout_width="294dp"
        android:layout_height="53dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/texto_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="italic"
         android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <ImageView
            android:id="@+id/logitos_login"
            android:layout_width="63dp"
            android:layout_height="129dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/logitos" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/usuario_login"
                android:layout_width="287dp"
                android:layout_height="55dp"
                android:background="@drawable/style_edi_text"
                android:layout_marginBottom="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:hint="@string/usuario"
                android:textColorHint="#808080"/>

            <EditText
                android:id="@+id/pasword_login"
                android:layout_width="287dp"
                android:layout_height="55dp"
                android:background="@drawable/style_edi_text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="textPassword"
                android:hint="@string/contraseña1"
                android:textColorHint="#808080"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="267dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:padding="0dp"
        android:text="@string/btn_login"
        android:textSize="35dp"
        app:strokeColor="@color/bordes"
        app:strokeWidth="1.5dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/texto2_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/recupera_contraseña_login"
        android:textColor="@color/white"
        android:textSize="24dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="352dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"

        android:text="@string/google_login"

        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30dp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ico_google1"
        app:iconGravity="textStart"

        app:iconSize="48dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto2_login"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#DADCE0"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/regis_Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:text="@string/no_tienes_cuenta_home"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

        <TextView
            android:id="@+id/txt_registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegistrateHome"
            android:fontFamily="@font/tiro_devanagari_hindi"
            android:textColor="@color/registrate"
            android:textSize="24sp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"/>
    </LinearLayout>
</LinearLayout>