<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/nombre_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/Bienvenida"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="237dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/texto_home"
        android:layout_width="354dp"
        android:layout_height="91dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/TextoHome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_app"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/boton_home"
        android:layout_width="317dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:padding="0sp"
        android:text="@string/BotonHome"
        android:textColorLink="#1770cf"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_home"
        app:layout_constraintVertical_bias="0.269"
        app:strokeColor="@color/bordes"
        app:strokeWidth="1.5dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/registrate_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegistrateHome"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_home"
        app:layout_constraintVertical_bias="0.214"
        android:layout_marginTop="41dp"/>
</LinearLayout>